fixed cube on mobile

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -42,6 +42,17 @@ svg {
 
 
 }
+// media querry for only icons to be smaller on mobile 600px
+@media only screen and (max-width: 600px){
+    .footer{
+        
+        .links{
+            width: 100%;
+            }
+    }
+
+}
+
 
 
 
