--- a/src/pages/About/About.scss
+++ b/src/pages/About/About.scss
@@ -1,100 +1,93 @@
 .about-me {
-    margin-top: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-   
-    position: relative;
-    animation: fadeInLeft 1s forwards;
-    color:#ccc;
-    h1 {
-       
-        font-family: serif;
-        font-weight: 400;
-        color: #ccc;
-        font-size: 50px;
+  margin-top: 5%;
+  margin-left: 5%;
+  margin-right: 5%;
+
+  position: relative;
+  animation: fadeInLeft 1s forwards;
+  color: #ccc;
+  h1 {
+    font-family: serif;
+    font-weight: 400;
+    color: #ccc;
+    font-size: 50px;
+  }
+
+  p {
+    font-family: sans-serif;
+    font-weight: 300;
+    min-width: fit-content;
+
+    &:nth-of-type(1) {
+      animation-delay: 0.5s;
     }
-
-    p {
-        font-family: sans-serif;
-        font-weight: 300;
-        min-width: fit-content;
-
-        &:nth-of-type(1) {
-            animation-delay: 0.5s;
-        }
-        &:nth-of-type(2) {
-            animation-delay: 0.5s;
-        }
-        &:nth-of-type(3) {
-            animation-delay: 0.5s;
-        }
-
+    &:nth-of-type(2) {
+      animation-delay: 0.5s;
+    }
+    &:nth-of-type(3) {
+      animation-delay: 0.5s;
     }
   }
-  .content {
-    display: flex;
-    flex-wrap: wrap;
-  }
+}
+.content {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.myImage {
+  margin-top: auto;
+  width: auto;
+  height: 100%;
+  display: block;
+  align-items: start;
+}
 
-  .myImage{
-    margin-top: auto;
-    width: auto;
-    height: 100%;
-    display: block;
-    align-items: start;
-  }
-
- .summary{
+.summary {
   width: 80%;
   margin-left: auto;
- }
+}
 
-  img {
-    width: 200px;
+img {
+  width: 200px;
+}
+.stage-cube-cont {
+  transform: scale(0.8);
 
-  }
-  .stage-cube-cont {
- 
-    transform: scale(0.8);
+  width: 50%;
+  height: 90%;
 
-    width: 50%;
-    height: 90%;
-   
-    animation: fadeIn 6s forwards;
-    top: 5%;
-    padding-top: 12%;
+  animation: fadeIn 6s forwards;
+  top: 5%;
+  padding-top: 12%;
+  position: absolute;
+  right: 25%;
+  margin-bottom: 0%;
+  overflow: hidden;
+}
+.cubespinner {
+  animation-name: spincube;
+  margin-top: 40%;
+
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+  animation-duration: 12s;
+  transform-style: preserve-3d;
+  transform-origin: 100px 100px 0;
+  margin-left: calc(50% - 100px);
+
+  div {
     position: absolute;
-    right: 25%;
-    margin-bottom: 0%;
-    overflow: hidden;
+    width: 200px;
+    height: 200px;
+    border: 1px solid #ccc;
+    background: rgba(255, 255, 255, 0.4);
+    text-align: center;
+    font-size: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 20px 0px lightyellow;
   }
-  .cubespinner {
-    
-
-    animation-name: spincube;
-    margin-top: 40%;
-    
-    animation-timing-function: ease-in-out;
-    animation-iteration-count: infinite;
-    animation-duration: 12s;
-    transform-style: preserve-3d;
-    transform-origin: 100px 100px 0;
-    margin-left: calc(50% - 100px);
-  
-    div {
-      position: absolute;
-      width: 200px;
-      height: 200px;
-      border: 1px solid #ccc;
-      background: rgba(255, 255, 255, 0.4);
-      text-align: center;
-      font-size: 100px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      box-shadow: 0 0 20px 0px lightyellow;
-    }
 
   .face1 {
     transform: translateZ(100px);
@@ -122,7 +115,6 @@
   }
 }
 
-
 @keyframes spincube {
   from,
   to {
@@ -145,104 +137,112 @@
   }
 }
 
-.about-footer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #004fa0;
-    color: white;
-    margin-top: 30%;
-    right: 0;
-    left: 0;
-    bottom: 0;
-    
-    h1{
-        color: #ccc;
+.about-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #004fa0;
+  color: white;
+  margin-top: 30%;
+  right: 0;
+  left: 0;
+  bottom: 0;
+
+  h1 {
+    color: #ccc;
+  }
+  .links {
+    width: 70%;
+    display: block;
+    justify-content: space-evenly;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+  a {
+    font-size: 40px;
+    margin-bottom: 5%;
+    margin: 20px;
+  }
+  svg {
+    color: #d8dce7;
+    width: 50px;
+    &:hover {
+      animation: bounce 1s;
     }
-    .links {
-        width: 50%;
-        display: block;
-        justify-content: space-evenly;
-        text-align: center;
-        margin-bottom: 5px;
-    }
-    a {
-        font-size: 40px;
-        margin-bottom: 5%;
-        margin: 20px;
-    }
-    svg {
-        color: #d8dce7;
-        width: 50px;
-        &:hover{
-            animation: bounce 1s;
-        }
-    }
+  }
 }
 //media query for 1200px
-@media only screen and (max-width: 1200px){
-    .about-footer{
-        margin-top: 30%;
-       
-        right: 0;
-        bottom: 0;
-      
-    }
-    .about-me {
-        margin-top: 20%;
-        display: block;
-    }
-    .footer
-    .myImage {
-        margin-top: 10%;
-        justify-content: center;
-    }
-    .summary{
-        width: 100%;
-        margin-left: 0;
-    }
-    // move the cube all the way to the bottom
-    .stage-cube-cont{
-        width: 100%;
-        height: 110%;
-        margin-top: 10%;
-        margin-right: 0;
-        padding-top: 0;
-        right: 0;
-        top: 0;
-    }
-    .cubespinner{
-        margin-top: 5%;
-        margin-left: 50%;
-        width: 100%;
-        height: 110%;
-    }
+@media only screen and (max-width: 1200px) {
+  .about-footer {
+    margin-top: 30%;
 
+    right: 0;
+    bottom: 0;
+  }
+  .about-me {
+    margin-top: 20%;
+    display: block;
+  }
+  .footer .myImage {
+    margin-top: 10%;
+    justify-content: center;
+  }
+  .summary {
+    width: 100%;
+    margin-left: 0;
+  }
+  // move the cube all the way to the bottom
+  .stage-cube-cont {
+    width: 100%;
+    height: 110%;
+    margin-top: 10%;
+    margin-right: 0;
+    padding-top: 0;
+    right: 0;
+    top: 0;
+  }
+  .cubespinner {
+    margin-top: 5%;
+    margin-left: 50%;
+    width: 100%;
+    height: 110%;
+  }
 }
-@media screen and (max-width: 700px){
-  .about-footer{
-    width: 110%
+@media screen and (max-width: 500px) {
+  .about-footer {
+    width: 100%;
+    left: 0;
+    margin-top: 70%;
   }
   .about-me {
     margin-top: 20%;
     margin-left: 15%;
   }
-  .stage-cube-cont{
+  .stage-cube-cont {
     margin-top: 15%;
     width: 95%;
     height: 110%;
-   
-    
   }
-  .summary{
+  .summary {
     width: 120%;
-    
   }
-  .cubespinner{
+  .cubespinner {
     margin-top: 8%;
     margin-left: 50%;
-
+  }
+  .stage-cube-cont {
+    transform: scale(0.6);
+    width: 65%;
+    height: 200%;
+    animation: fadeIn 6s forwards;
+    top: 5%;
+    right: 15%;
+  }
+  .cubespinner {
+    animation-name: spincube;
+    margin-top: 330%;
+    transform-style: preserve-3d;
+    transform-origin: 100px 100px 0;
+    margin-left: calc(50% - 100px);
   }
 }
-
-
